User stuff (#10)
* Starting logic for user

* provider user code

* WIP: Test this

* WIP: Test this

* WIP: User stuff

* WIP: trying to get middlewares to register

* WIP: Try this

* Coverage to auth

* Login and registration working

* A whole ball of wax

* update snaps
