# service/internal/api/reptr.go
@@ -5,31 +5,40 @@ import (
 	"errors"
 	"fmt"
 	"github.com/rmarken/reptr/api"
-	"github.com/rmarken/reptr/service/internal/logic"
+	"github.com/rmarken/reptr/service/internal/logic/auth"
+	"github.com/rmarken/reptr/service/internal/logic/decks"
+	"github.com/rmarken/reptr/service/internal/logic/provider"
 	"github.com/rmarken/reptr/service/internal/models"
+	"github.com/rmarken/reptr/service/internal/web/components"
 	"github.com/rs/zerolog"
 	"net/http"
 )
 
 var _ api.ServerInterface = ReprtClient{}
 
+const IDToken = "id_token"
+
 type ReprtClient struct {
-	logger     zerolog.Logger
-	controller logic.Controller
+	logger             zerolog.Logger
+	deckController     decks.Controller
+	providerController provider.Controller
+	authenticator      auth.Authentication
 }
 
-func New(logger zerolog.Logger, controller logic.Controller) *ReprtClient {
+func New(logger zerolog.Logger, deckController decks.Controller, providerController provider.Controller, authentication auth.Authentication) *ReprtClient {
 	logger = logger.With().Str("module", "server").Logger()
 	return &ReprtClient{
-		logger:     logger,
-		controller: controller,
+		logger:             logger,
+		deckController:     deckController,
+		providerController: providerController,
+		authenticator:      authentication,
 	}
 }
 
 func (rc ReprtClient) GetGroups(w http.ResponseWriter, r *http.Request, params api.GetGroupsParams) {
 	log := rc.logger.With().Str("method", "GetGroups").Logger()
 	w.Header().Set("Content-Type", "application/json")
-	groups, err := rc.controller.GetGroups(r.Context(), params.From, params.To, params.Limit, params.Offset)
+	groups, err := rc.deckController.GetGroups(r.Context(), params.From, params.To, params.Limit, params.Offset)
 	if err != nil {
 		log.Error().Err(err).Msgf("while getting groups with: %+v", params)
 		status := toStatus(err)
@@ -89,7 +98,7 @@ func (rc ReprtClient) AddGroup(w http.ResponseWriter, r *http.Request) {
 	}
 	defer r.Body.Close()
 
-	group, err := rc.controller.CreateGroup(r.Context(), groupName.GroupName)
+	group, err := rc.deckController.CreateGroup(r.Context(), groupName.GroupName)
 	if err != nil {
 		log.Error().Err(err).Msg("while trying create group")
 		status := toStatus(err)
@@ -128,7 +137,7 @@ func (rc ReprtClient) AddDeck(w http.ResponseWriter, r *http.Request) {
 	}
 	defer r.Body.Close()
 
-	deck, err := rc.controller.CreateDeck(r.Context(), deckName.DeckName)
+	deck, err := rc.deckController.CreateDeck(r.Context(), deckName.DeckName)
 	if err != nil {
 		log.Error().Err(err).Msg("while trying create deck")
 		status := toStatus(err)
@@ -153,7 +162,7 @@ func (rc ReprtClient) AddDeckToGroup(w http.ResponseWriter, r *http.Request, gro
 
 	w.Header().Set("Content-Type", "application/json")
 
-	err := rc.controller.AddDeckToGroup(r.Context(), groupId, deckId)
+	err := rc.deckController.AddDeckToGroup(r.Context(), groupId, deckId)
 	if err != nil {
 		log.Error().Err(err).Msg("while trying create deck")
 		status := toStatus(err)
@@ -171,14 +180,152 @@ func (rc ReprtClient) AddDeckToGroup(w http.ResponseWriter, r *http.Request, gro
 	w.WriteHeader(http.StatusCreated)
 	w.Write([]byte(groupId))
 }
+func (rc ReprtClient) RegistrationPage(w http.ResponseWriter, r *http.Request) {
+	log := rc.logger.With().Str("method", "RegistrationPage").Logger()
+	log.Info().Msgf("serving registration page")
+	err := components.Register(nil).Render(r.Context(), w)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+}
+
+func (rc ReprtClient) Register(w http.ResponseWriter, r *http.Request) {
+	log := rc.logger.With().Str("method", "register").Logger()
+	log.Info().Msgf("calling register")
+
+	err := r.ParseForm()
+	if err != nil {
+		log.Error().Err(err).Msg("unable to parse form")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	email := r.PostForm.Get("email")
+	password := r.PostForm.Get("password")
+	repassword := r.PostForm.Get("repassword")
+
+	if email == "" {
+		w.WriteHeader(http.StatusBadRequest)
+		err := components.Register(components.Banner("Must provide email")).Render(r.Context(), w)
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError)
+		}
+		return
+	}
+
+	if password == "" {
+		w.WriteHeader(http.StatusBadRequest)
+		err := components.Register(components.Banner("Must provide password")).Render(r.Context(), w)
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError)
+		}
+		return
+	}
+
+	//TODO: check password strength
+
+	if password != repassword {
+		w.WriteHeader(http.StatusBadRequest)
+		err := components.Register(components.Banner("Passwords do not match")).Render(r.Context(), w)
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError)
+		}
+		return
+	}
+
+	user, registrationError, err := rc.authenticator.RegisterUser(r.Context(), email, password)
+	if err != nil {
+		log.Error().Err(err).Msg("while registering")
+		http.Error(w, "while registering", http.StatusInternalServerError)
+		return
+	}
+
+	if !registrationError.IsZero() {
+		w.WriteHeader(registrationError.StatusCode)
+		err := components.Register(components.Banner(registrationError.Description)).Render(r.Context(), w)
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError)
+		}
+		return
+	}
+
+	log.Info().Msgf("user is registered: %+v", user)
+	w.WriteHeader(http.StatusCreated)
+	err = components.Login(components.Banner("Registration Successful")).Render(r.Context(), w)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+}
+
+func (rc ReprtClient) LoginPage(w http.ResponseWriter, r *http.Request) {
+	log := rc.logger.With().Str("method", "LoginPage").Logger()
+	log.Info().Msgf("serving login page")
+	err := components.Login(nil).Render(r.Context(), w)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+}
+
+func (rc ReprtClient) Login(w http.ResponseWriter, r *http.Request) {
+	logger := rc.logger.With().Str("method", "Login").Logger()
+	logger.Debug().Msg("login called")
+
+	err := r.ParseForm()
+	if err != nil {
+		logger.Error().Err(err).Msg("unable to parse form")
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	email := r.PostForm.Get("email")
+	if email == "" {
+		logger.Info().Msgf("login attempt without email")
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	password := r.PostForm.Get("password")
+	if password == "" {
+		logger.Info().Msgf("login attempt without password - email: %s", email)
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	token, err := rc.authenticator.PasswordCredentialsToken(r.Context(), email, password)
+	if err != nil {
+		logger.Error().Err(err).Msgf("error authenticating %s: %v", email, err)
+		http.Error(w, "Bad request - Invalid username or password", http.StatusUnauthorized)
+		return
+	}
+
+	if tokenString, ok := token.Extra(IDToken).(string); ok {
+		idToken, err := rc.authenticator.VerifyIDToken(r.Context(), tokenString)
+		if err != nil {
+			http.Error(w, "unable to verify token", http.StatusInternalServerError)
+			return
+		}
+		w.Header().Set("Authorization", "Bearer "+tokenString)
+		w.WriteHeader(http.StatusOK)
+		components.Home(idToken.Subject).Render(r.Context(), w)
+
+		return
+	}
+
+	logger.Error().Msgf("Bad request - token doesn't contain %s", IDToken)
+	http.Error(w, fmt.Sprintf("Bad request - token doesn't contain %s", IDToken), http.StatusInternalServerError)
+	return
+}
 
 func toStatus(err error) int {
 	switch {
-	case errors.Is(err, logic.ErrInvalidToBeforeFrom),
-		errors.Is(err, logic.ErrInvalidGroupName),
-		errors.Is(err, logic.ErrInvalidDeckName),
-		errors.Is(err, logic.ErrEmptyGroupID),
-		errors.Is(err, logic.ErrEmptyDeckID):
+	case errors.Is(err, decks.ErrInvalidToBeforeFrom),
+		errors.Is(err, decks.ErrInvalidGroupName),
+		errors.Is(err, decks.ErrInvalidDeckName),
+		errors.Is(err, decks.ErrEmptyGroupID),
+		errors.Is(err, decks.ErrEmptyDeckID):
 		return http.StatusBadRequest
 	default:
 		return http.StatusInternalServerError
